<resources>
    <string name="app_name">LoginApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="register_text" >Click for register .</string>



    <!--Strings for register screeen -->
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone" >Phone</string>
    <string name="city">City</string>
    <string name="register_button">Register</string>
</resources>
